# geocalcpp

./: .gitignore  CMakeLists.txt  README.md  id_ed25519   id_ed25519 .pub  ketentuan.txt
include/: bangunDatar.h  bangunRuang.h  clearScreen.h  color.h  displayImage.h  input.h  menu.h  output.h  printASCII.h  validateInput.h
include/enums/: EnumsBangunDatar.h  EnumsBangunRuang.h  EnumsMainMenu.h
include/resources/: ImagesBangunDatar.h  ImagesBangunRuang.h
src/: main.cpp
src/modules/: bangunDatar.cpp  bangunRuang.cpp  clearScreen.cpp  color.cpp  displayImage.cpp  input.cpp  output.cpp  printASCII.cpp  validateInput.cpp
src/resources/: imagesBangunDatar.cpp  imagesBangunRuang.cpp
src/view/: handleMenu.cpp  menu.cpp
src/view/ascii/: logo.txt
